RESOLVED FIXED105711
[BlackBerry] DRT - Crashed when running pixels tests
https://bugs.webkit.org/show_bug.cgi?id=105711
Summary [BlackBerry] DRT - Crashed when running pixels tests
Xiaobo Wang
Reported 2012-12-23 23:52:53 PST
Internal PR #270003 Calling window->post() will result in buffer swapping which is only allowed in UI thread now, and I found we don't need to call it for GL renderer.
Attachments
patch (2.45 KB, patch)
2012-12-24 00:12 PST, Xiaobo Wang
no flags
patch (2.45 KB, patch)
2012-12-24 00:15 PST, Xiaobo Wang
no flags
Xiaobo Wang
Comment 1 2012-12-24 00:12:19 PST
Xiaobo Wang
Comment 2 2012-12-24 00:15:10 PST
George Staikos
Comment 3 2012-12-24 04:54:03 PST
Comment on attachment 180654 [details] patch Well it's a hack and a start, but it's just going to breakdown later. Since it's all forward progress, r+, but we have to move this post to the proper thread.
WebKit Review Bot
Comment 4 2012-12-24 04:57:36 PST
Comment on attachment 180654 [details] patch Clearing flags on attachment: 180654 Committed r138440: <http://trac.webkit.org/changeset/138440>
WebKit Review Bot
Comment 5 2012-12-24 04:57:40 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.