[BlackBerry] DRT - Crashed when running pixels tests https://bugs.webkit.org/show_bug.cgi?id=105711

RIM PR 270003

Patch by Xiaobo Wang <xbwang@torchmobile.com.cn> on 2012-12-24
Reviewed by George Staikos.

Calling window->post() here will result in buffer swapping which is
only allowed in UI thread now, and I found we don't need to call it
for GL renderer.

* DumpRenderTree/blackberry/PixelDumpSupportBlackBerry.cpp:
(createBitmapContextFromWebView):

Canonical link: https://commits.webkit.org/123924@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138440 268f45cc-cd09-0410-ab3c-d52691b4dbfc